--- a/index.html
+++ b/index.html
@@ -4,30 +4,50 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Your Website</title>
+	<title>The Network of Wellington</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
+
+
 <body>
 
-<p>Notice how this content isn't centered. To center it we need to wrap it</p>
+	<div class="circle"></div>
 
-	<section>
+	<h2 class="headcolor"> Wellington </h2>
+	<h2 class="headcolor2"> Network. </h2>
+	<p class="intro2">As the technique progression in the world. The ways of how human communicate with other become various. How we contect other people become so easy. They rely on the infrastructures on every countries. </p>
+
+
+
+	<!-- <img src="img/city.jpg" alt="Flowers in Chania" class="cityimg" width="400px"> -->
+
+	<!-- <hr align="right" width="60%"> -->
+
+	<hr id="line"/>
+
+<!-- <p>Notice how this content isn't centered. To center it we need to wrap it</p> -->
+
+	<!-- <section>
 		<h1>Here is some centered content, by wrapping it with a section tag</h1>
 		<p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci. </em></p>
 
 		<p>Notice how if you change the width of your browser it stays in the center</p>
-	</section>
+	</section> -->
 
-	<section>
+	<!-- <section>
 		<p>This is a simple nav bar, which is full width of the page</p>
-	</section>
+	</section> -->
+
+	<h1 class="Intro">Wellington</h1>
+	<h1 class="Intro1">Network</h1>
 	<nav>
 		<h3>A nice navigation bar</h3>
-		<a href="#one">Link 1</a>
-		<a href="#two">Link 2</a>
-		<a href="#three">Link 3</a>
+		<a href="#one" class="one" style="text-decoration:none">Camera System</a>
+		<a href="#two" class="two" style="text-decoration:none">Transportation System</a>
+		<a href="#three" class="three" style="text-decoration:none">Street Marking</a>
 	</nav>
+
 
 	<section id="one">
 		<p><strong>Content number one</strong></p>
@@ -49,7 +69,7 @@
 		</section>
 	</header>
 
-	
+
 
 	<section>
 		<h3>Grids</h3>
@@ -103,7 +123,7 @@
 	<header>
 		<section>
 			<h1>Infrastructure of Wellington</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<p>As the technique progression in the world. The ways of how human communicate with other become various. How we contect other people become so easy. They rely on the infrastructures on every countries. </p>
 		</section>
 	</header>
 
@@ -148,6 +168,8 @@
 			</div>
 		</div>
 	</section>
+
+
 
 </body>
 
