--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	<p class="intro2">As the technique progression in the world. The ways of how human communicate with other become various. How we contect other people become so easy. They rely on the infrastructures on every countries. </p>
 
 
-
-	<!-- <img src="img/city.jpg" alt="Flowers in Chania" class="cityimg" width="400px"> -->
+<!-- 
+	<img src="img/layer 1.png" alt="sketch" class="layer_1" width="400px"> -->
 
 	<!-- <hr align="right" width="60%"> -->
 
-	<hr id="line"/>
+	<hr id="line"/ width="70%">
 
 <!-- <p>Notice how this content isn't centered. To center it we need to wrap it</p> -->
 
@@ -42,44 +42,89 @@
 	<h1 class="Intro">Wellington</h1>
 	<h1 class="Intro1">Network</h1>
 	<nav>
-		<h3>A nice navigation bar</h3>
 		<a href="#one" class="one" style="text-decoration:none">Camera System</a>
 		<a href="#two" class="two" style="text-decoration:none">Transportation System</a>
 		<a href="#three" class="three" style="text-decoration:none">Street Marking</a>
 	</nav>
 
 
-	<section id="one">
-		<p><strong>Content number one</strong></p>
+	<section id="one" class="camera" >
+		<p><strong>Camera System</strong></p>
 		<p>By setting an a tag's href to "#one", it will link to a html element with the id of "one". <a href="https://css-tricks.com/hash-tag-links-padding/">More info about that here</a></p>
 	</section>
 
-	<section id="two">
-		<p><strong>Content number 2</strong></p>
+	<section>
+		<div class="g-row">
+			<div class="g-30">
+				<img src="img/cc1.jpeg">
+				<img src="img/cc2.jpeg">
+
+			</div>
+
+			<div class="g-70 padded">
+				<h3>Road camera</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
+			</div>
+            
+			
+		</div>
+
+	<section id="two" class="camera">
+		<p><strong>Tramsporation System</strong></p>
 	</section>
 
-	<section id="three">
-		<p><strong>Content number 3</strong></p>
+	<div class="g-row">
+			<div class="g-30">
+				<img src="img/t1.jpeg">
+				<img src="img/t2.jpeg">
+				<img src="img/t3.jpeg">
+
+			</div>
+			<div class="g-70 padded">
+				<h3>Example</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
+			</div>
+		</div>
+
+	<section id="three" class="camera">
+		<p><strong>Street marking</strong></p>
 	</section>
 
-	<header>
+
+		<div class="g-row">
+			<div class="g-30">
+				<img src="img/s1.jpeg">
+				<img src="img/s2.jpeg">
+				<img src="img/s3.jpeg">
+			</div>
+			<div class="g-70 padded" >
+				<h3>Example</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
+			</div>
+		</div>
+
+		<div class="camera">
+		</div>
+
+
+	<!-- <header>
 		<section>
 			<h1>This header has a solid background and some padding</h1>
 			<p>There is also a section tag inside it to center this content</p>
 		</section>
 	</header>
+ -->
 
 
-
-	<section>
+	<!-- <section>
 		<h3>Grids</h3>
 
 		<p>Use grids to divide up or layout content. For example, putting an image on the left, and lots to text on the right</p>
 
-		<p>I've added a 'show' class so you can see where the grids are. Use chrome's web inspector tools to take a closer look</p>
+		<p>I've added a 'show' class so you can see where the grids are. Use chrome's web inspector tools to take a closer look</p> -->
 
 
-		<div class="g-row show"> <!--first wrap all grid cells in a g-row-->
+		<!--<div class="g-row show"> first wrap all grid cells in a g-row
 			<div class="g-50 show">
 				50% width .g-50
 			</div>
@@ -94,11 +139,11 @@
 			<div class="g-70 show">
 				70% width .g-70
 			</div>
-		</div>
+		</div> -->
 
-		<p>The other cool things about grids, is that 50% width means 50% of the div's <em>parent</em>. This means you can put cells in cells to get infinitly smaller sizes. The possiblities are endless!</p>
-
-		<div class="g-row show"> <!--first wrap all grid cells in a g-row-->
+		<!-- <p>The other cool things about grids, is that 50% width means 50% of the div's <em>parent</em>. This means you can put cells in cells to get infinitly smaller sizes. The possiblities are endless!</p>
+ -->
+<!-- 		<div class="g-row show"> first wrap all grid cells in a g-row
 			<div class="g-50 show">
 				<div class="g-50 show">
 					<div class="g-50 show">
@@ -116,48 +161,21 @@
 				50%
 			</div>
 		</div>
+ -->
+	<!-- 	<p>Here's a simple page using all of these elements</p> -->
+	<!-- </section> -->
 
-		<p>Here's a simple page using all of these elements</p>
-	</section>
-
-	<header>
+	<!-- <header>
 		<section>
 			<h1>Infrastructure of Wellington</h1>
 			<p>As the technique progression in the world. The ways of how human communicate with other become various. How we contect other people become so easy. They rely on the infrastructures on every countries. </p>
 		</section>
 	</header>
+ -->
+	
 
-	<section>
-		<div class="g-row">
-			<div class="g-30">
-				<img src="img/cover.jpg">
-			</div>
-			<div class="g-70 padded">
-				<h3>Example</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
-			</div>
-		</div>
-
-		<div class="g-row">
-			<div class="g-30">
-				<img src="img/cover.jpg">
-			</div>
-			<div class="g-70 padded">
-				<h3>Example</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
-			</div>
-		</div>
-
-		<div class="g-row">
-			<div class="g-30">
-				<img src="img/cover.jpg">
-			</div>
-			<div class="g-70 padded">
-				<h3>Example</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
-			</div>
-		</div>
-
+		
+<!-- 
 		<div class="g-row">
 			<div class="g-30">
 				<img src="img/cover.jpg">
@@ -168,7 +186,7 @@
 			</div>
 		</div>
 	</section>
-
+ -->
 
 
 </body>
