--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 	<p class="intro2">As the technique progression in the world. The ways of how human communicate with other become various. How we contect other people become so easy. They rely on the infrastructures on every countries. </p>
 
 
-<!-- 
-	<img src="img/layer 1.png" alt="sketch" class="layer_1" width="400px"> -->
 
-	<!-- <hr align="right" width="60%"> -->
+	
+
 
 	<hr id="line"/ width="70%">
+
+	<img src="img/layer_1.png" alt="sketch" class="Layer_1" width="30%">
 
 <!-- <p>Notice how this content isn't centered. To center it we need to wrap it</p> -->
 
