--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>The Network of Wellington</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<style> 
+#rcorners1 {
+  border-radius: 25px;
+  background: #73AD21;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;  
+}
+</style>
 </head>
 
 
@@ -27,29 +37,17 @@
 
 	<img src="img/layer_1.png" alt="sketch" class="Layer_1" width="30%">
 
-<!-- <p>Notice how this content isn't centered. To center it we need to wrap it</p> -->
-
-	<!-- <section>
-		<h1>Here is some centered content, by wrapping it with a section tag</h1>
-		<p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci. </em></p>
-
-		<p>Notice how if you change the width of your browser it stays in the center</p>
-	</section> -->
-
-	<!-- <section>
-		<p>This is a simple nav bar, which is full width of the page</p>
-	</section> -->
-
 	<h1 class="Intro">Wellington</h1>
 	<h1 class="Intro1">Network</h1>
 	<nav>
-		<a href="#one" class="one" style="text-decoration:none">Camera System</a>
-		<a href="#two" class="two" style="text-decoration:none">Transportation System</a>
-		<a href="#three" class="three" style="text-decoration:none">Street Marking</a>
+		<a href="index.html" class="home" style="text-decoration:none">Home</a>
+		<a href="index2.html" class="one" style="text-decoration:none">Camera System</a>
+		<a href="index3.html" class="two" style="text-decoration:none">Transportation System</a>
+		<a href="index4.html" class="three" style="text-decoration:none">Street Marking</a>
 	</nav>
 
-
-	<section id="one" class="camera" >
+<!-- page1 -->
+<!-- 	<section id="one" class="camera" >
 		<p><strong>Camera System</strong></p>
 		<p>By setting an a tag's href to "#one", it will link to a html element with the id of "one". <a href="https://css-tricks.com/hash-tag-links-padding/">More info about that here</a></p>
 	</section>
@@ -70,7 +68,10 @@
 			
 		</div>
 
-	<section id="two" class="camera">
+ -->
+
+<!-- page2 -->
+<!-- 	<section id="two" class="camera">
 		<p><strong>Tramsporation System</strong></p>
 	</section>
 
@@ -89,10 +90,12 @@
 
 	<section id="three" class="camera">
 		<p><strong>Street marking</strong></p>
-	</section>
+	</section> -->
 
 
-		<div class="g-row">
+
+<!-- page3 -->
+	<!-- 	<div class="g-row">
 			<div class="g-30">
 				<img src="img/s1.jpeg">
 				<img src="img/s2.jpeg">
@@ -105,91 +108,12 @@
 		</div>
 
 		<div class="camera">
-		</div>
-
-
-	<!-- <header>
-		<section>
-			<h1>This header has a solid background and some padding</h1>
-			<p>There is also a section tag inside it to center this content</p>
-		</section>
-	</header>
- -->
-
-
-	<!-- <section>
-		<h3>Grids</h3>
-
-		<p>Use grids to divide up or layout content. For example, putting an image on the left, and lots to text on the right</p>
-
-		<p>I've added a 'show' class so you can see where the grids are. Use chrome's web inspector tools to take a closer look</p> -->
-
-
-		<!--<div class="g-row show"> first wrap all grid cells in a g-row
-			<div class="g-50 show">
-				50% width .g-50
-			</div>
-			<div class="g-50 show">
-				50% width .g-50
-			</div>
-
-			<div class="g-30 show">
-				30% width .g-30
-			</div>
-
-			<div class="g-70 show">
-				70% width .g-70
-			</div>
 		</div> -->
 
-		<!-- <p>The other cool things about grids, is that 50% width means 50% of the div's <em>parent</em>. This means you can put cells in cells to get infinitly smaller sizes. The possiblities are endless!</p>
- -->
-<!-- 		<div class="g-row show"> first wrap all grid cells in a g-row
-			<div class="g-50 show">
-				<div class="g-50 show">
-					<div class="g-50 show">
-						50%
-					</div>
-					<div class="g-50 show">
-						50%
-					</div>
-				</div>
-				<div class="g-50 show">
-					50%
-				</div>
-			</div>
-			<div class="g-50 show">
-				50%
-			</div>
-		</div>
- -->
-	<!-- 	<p>Here's a simple page using all of these elements</p> -->
-	<!-- </section> -->
 
-	<!-- <header>
-		<section>
-			<h1>Infrastructure of Wellington</h1>
-			<p>As the technique progression in the world. The ways of how human communicate with other become various. How we contect other people become so easy. They rely on the infrastructures on every countries. </p>
-		</section>
-	</header>
- -->
+
+
 	
-
-		
-<!-- 
-		<div class="g-row">
-			<div class="g-30">
-				<img src="img/cover.jpg">
-			</div>
-			<div class="g-70 padded">
-				<h3>Example</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque est, egestas tristique quam nec, efficitur efficitur massa. Aenean in faucibus felis. Mauris ut ligula vestibulum, varius metus vitae, maximus orci.</p>
-			</div>
-		</div>
-	</section>
- -->
-
-
 </body>
 
 </html>
