start to do the basic template. The fllowing work is to put every elements into web.

--- a/index.html
+++ b/index.html
@@ -33,15 +33,18 @@
 	
 
 
-	<hr id="line"/ width="70%">
-
-	<img src="img/layer_1.png" alt="sketch" class="Layer_1" width="30%">
+	<hr id="line" align="right" width="70%">
+<!-- 
+	<img src="img/Layer_1.png" alt="sketch" class="Layer_1" width="30%"> -->
+	<img src="img/Layer_3.png" alt="sketch" class="Layer_3" >
+	<img src="img/Layer_3.png" alt="sketch" class="Layer_4" >
+	<img src="img/ROUTER.png" alt="ROUTER" class="ROUTER" >
 
 	<h1 class="Intro">Wellington</h1>
 	<h1 class="Intro1">Network</h1>
 	<nav>
 		<a href="index.html" class="home" style="text-decoration:none">Home</a>
-		<a href="index2.html" class="one" style="text-decoration:none">Camera System</a>
+		<a href="index2.html" class="one" style="text-decoration:none"> System</a>
 		<a href="index3.html" class="two" style="text-decoration:none">Transportation System</a>
 		<a href="index4.html" class="three" style="text-decoration:none">Street Marking</a>
 	</nav>
