--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,7 @@
   <title>Your page title here :)</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -30,6 +31,7 @@
 <body>
 
   <nav>
+    <a href="index.html" class="home" style="text-decoration:none">Home</a>
     <a href="index2.html" class="one" style="text-decoration:none">Camera System</a>
     <a href="index3.html" class="two" style="text-decoration:none">Transportation System</a>
     <a href="index4.html" class="three" style="text-decoration:none">Street Marking</a>
