--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,7 @@
   <title>Your page title here :)</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -17,30 +18,25 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
-    </div>
-  </div>
+  <nav>
+    <a href="index.html" class="home" style="text-decoration:none">Home</a>
+    <a href="index2.html" class="one" style="text-decoration:none">Camera System</a>
+    <a href="index3.html" class="two" style="text-decoration:none">Transportation System</a>
+    <a href="index4.html" class="three" style="text-decoration:none">Street Marking</a>
+  </nav>
 
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <hr id="line"/ width="70%">
+
+  <img src="img/t1.jpeg" alt="sketch" class="t1" > 
+
+
+
+
+
 </body>
 </html>
