finished the second page

--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Transportation System</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -23,6 +23,16 @@
 </head>
 <body>
 
+  <h1 class="trans">Transportation</h1>
+  <h1 class="trans2">System</h1>
+
+<div class="square"></div>
+<div class="square2"></div>
+
+
+<img src="img/t1.jpeg" alt="t1.jpeg" class="t1">
+<img src="img/t3.jpeg" alt="t1.jpeg" class="t3">
+
   <nav>
     <a href="index.html" class="home" style="text-decoration:none">Home</a>
     <a href="index2.html" class="one" style="text-decoration:none">Camera System</a>
@@ -30,11 +40,16 @@
     <a href="index4.html" class="three" style="text-decoration:none">Street Marking</a>
   </nav>
 
-  <hr id="line"/ width="70%">
+  <hr id="line" width="70%">
 
-  <img src="img/t1.jpeg" alt="sketch" class="t1" > 
+  <p class="t_explan">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There are so many car drive on the roads everyday. Why the are so organized? That all depended on the completed transportation system. The traffic light, road marking are comprised a completed transportation system. And all of them is control by the network, so the cars will know when to stop and drive. </p>
+
+<p class="t_explan2">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The bus system is also a part of the transportation system. Based on the network, we will know when the bus will come.</p>
 
 
+
+  
+  
 
 
 
