--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
 	<title>The Network of Wellington</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<style> 
-#rcorners1 {
-  border-radius: 25px;
-  background: #73AD21;
-  padding: 20px; 
-  width: 200px;
-  height: 150px;  
-}
-</style>
 </head>
 
 
@@ -34,17 +25,15 @@
 
 
 	<hr id="line" align="right" width="70%">
-<!-- 
-	<img src="img/Layer_1.png" alt="sketch" class="Layer_1" width="30%"> -->
+
 	<img src="img/Layer_3.png" alt="sketch" class="Layer_3" >
 	<img src="img/Layer_3.png" alt="sketch" class="Layer_4" >
-	<img src="img/ROUTER.png" alt="ROUTER" class="ROUTER" >
 
 	<h1 class="Intro">Wellington</h1>
 	<h1 class="Intro1">Network</h1>
 	<nav>
 		<a href="index.html" class="home" style="text-decoration:none">Home</a>
-		<a href="index2.html" class="one" style="text-decoration:none"> System</a>
+		<a href="index2.html" class="one" style="text-decoration:none">Camera System</a>
 		<a href="index3.html" class="two" style="text-decoration:none">Transportation System</a>
 		<a href="index4.html" class="three" style="text-decoration:none">Street Marking</a>
 	</nav>
@@ -113,8 +102,15 @@
 		<div class="camera">
 		</div> -->
 
+		<div class="square"></div>
 
-
+<div class="container">
+	<div class="avatar">
+		<!-- <a href="https://codepen.io/MarioDesigns/"> -->
+			<img src="img/ROUTER.png" alt="ROUTER" />
+		</a>
+	</div>
+</div>
 
 	
 </body>
