--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
 
 	<hr id="line" align="right" width="70%">
-
+<img src="img/cars.png" alt="sketch" class="cars" width="30%">
+<img src="img/camera3.png" alt="sketch" class="came" width="30%">
 	<img src="img/Layer_3.png" alt="sketch" class="Layer_3" >
 	<img src="img/Layer_3.png" alt="sketch" class="Layer_4" >
 
