--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Camera System</title>
+  <title>Transportation System</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,17 +18,25 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
+
+  <h1 class="trans">Camera</h1>
+  <h1 class="trans2">System</h1>
+
+<div class="square"></div>
+<div class="square2"></div>
+
+
+<img src="img/cc2.jpeg" alt="t1.jpeg" class="cc2" >
+<img src="img/cc1.jpeg" alt="t1.jpeg" class="t3" >
+<img src="img/cc3.jpeg" alt="t1.jpeg" class="camera2">
+
+<img src="img/camera.png" alt="t1.jpeg" class="test">
+
+
 
   <nav>
     <a href="index.html" class="home" style="text-decoration:none">Home</a>
@@ -37,9 +45,19 @@
     <a href="index4.html" class="three" style="text-decoration:none">Street Marking</a>
   </nav>
 
-  <hr id="line"/ width="70%">
+  <hr id="line" width="70%">
+
+  <p class="t_explan">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In order to pretect our safty and security, the camera system is started to develop in recent years in Wellington. This camera is a camera which located in a intersction. Usually use for record the traffic and find out the dangerous driving behaviours. </p>
+
+<p class="t_explan2">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is other smaller camera located at street. This is used to survillence the street and record any crimes on the road. There are so many camera on the road and thet work in different area. Some shop or house will also have their own camera to protect their properties.</p>
+
+<!--   <img id="img1" src="img/Layer_1.png">
+    <img id="img2" src="img/Layer_3.png"> -->
 
 
+
+  
+  
 
 
 
