--- a/index3.html
+++ b/index3.html
@@ -32,6 +32,8 @@
 
 <img src="img/t1.jpeg" alt="t1.jpeg" class="t1">
 <img src="img/t3.jpeg" alt="t1.jpeg" class="t3">
+<img src="img/cars.png" alt="t1.jpeg" class="car">
+
 
   <nav>
     <a href="index.html" class="home" style="text-decoration:none">Home</a>
@@ -45,6 +47,9 @@
   <p class="t_explan">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There are so many car drive on the roads everyday. Why the are so organized? That all depended on the completed transportation system. The traffic light, road marking are comprised a completed transportation system. And all of them is control by the network, so the cars will know when to stop and drive. </p>
 
 <p class="t_explan2">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The bus system is also a part of the transportation system. Based on the network, we will know when the bus will come.</p>
+
+<!--   <img id="img1" src="img/Layer_1.png">
+    <img id="img2" src="img/Layer_3.png"> -->
 
 
 
